// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoggedInNavBar /> matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoggedInNavBar
    logoutUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <nav
          className="navbar navbar-expand-sm navbar-dark bg-dark mb-5 fixed-top"
        >
          <div
            className="container"
          >
            <Link
              className="navbar-brand"
              replace={false}
              to="#"
            >
              Authors Haven
            </Link>
            <button
              className="navbar-toggler"
              data-target="#mobile-nav"
              data-toggle="collapse"
              type="button"
            >
              <span
                className="navbar-toggler-icon"
              />
            </button>
            <div
              className="collapse navbar-collapse"
              id="mobile-nav"
            >
              <ul
                className="navbar-nav ml-auto"
              >
                <withRouter(SearchForm) />
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link"
                    replace={false}
                    to="#"
                  >
                    <i
                      className="fas fa-search"
                    />
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link"
                    replace={false}
                    to="#"
                  >
                    <i
                      className="far fa-bell"
                    />
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link"
                    replace={false}
                    to="/articles"
                  >
                    Dashboard
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link"
                    replace={false}
                    to="/article/post"
                  >
                    <i
                      className="fas fa-plus"
                    />
                    New Article
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link"
                    data-placement="bottom"
                    data-toggle="popover"
                    data-trigger="focus"
                    replace={false}
                    to="#"
                  >
                    <i
                      className="far fa-user-circle fa-2x"
                    />
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <button
                    className="nav-link btn btn-outline-secondary"
                    onClick={[Function]}
                  >
                    Sign Out
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </nav>,
        <LinksPopup />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="container"
          >
            <Link
              className="navbar-brand"
              replace={false}
              to="#"
            >
              Authors Haven
            </Link>
            <button
              className="navbar-toggler"
              data-target="#mobile-nav"
              data-toggle="collapse"
              type="button"
            >
              <span
                className="navbar-toggler-icon"
              />
            </button>
            <div
              className="collapse navbar-collapse"
              id="mobile-nav"
            >
              <ul
                className="navbar-nav ml-auto"
              >
                <withRouter(SearchForm) />
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link"
                    replace={false}
                    to="#"
                  >
                    <i
                      className="fas fa-search"
                    />
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link"
                    replace={false}
                    to="#"
                  >
                    <i
                      className="far fa-bell"
                    />
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link"
                    replace={false}
                    to="/articles"
                  >
                    Dashboard
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link"
                    replace={false}
                    to="/article/post"
                  >
                    <i
                      className="fas fa-plus"
                    />
                    New Article
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link"
                    data-placement="bottom"
                    data-toggle="popover"
                    data-trigger="focus"
                    replace={false}
                    to="#"
                  >
                    <i
                      className="far fa-user-circle fa-2x"
                    />
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <button
                    className="nav-link btn btn-outline-secondary"
                    onClick={[Function]}
                  >
                    Sign Out
                  </button>
                </li>
              </ul>
            </div>
          </div>,
          "className": "navbar navbar-expand-sm navbar-dark bg-dark mb-5 fixed-top",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Link
                className="navbar-brand"
                replace={false}
                to="#"
              >
                Authors Haven
              </Link>,
              <button
                className="navbar-toggler"
                data-target="#mobile-nav"
                data-toggle="collapse"
                type="button"
              >
                <span
                  className="navbar-toggler-icon"
                />
              </button>,
              <div
                className="collapse navbar-collapse"
                id="mobile-nav"
              >
                <ul
                  className="navbar-nav ml-auto"
                >
                  <withRouter(SearchForm) />
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="fas fa-search"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="far fa-bell"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="/articles"
                    >
                      Dashboard
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="/article/post"
                    >
                      <i
                        className="fas fa-plus"
                      />
                      New Article
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      data-placement="bottom"
                      data-toggle="popover"
                      data-trigger="focus"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="far fa-user-circle fa-2x"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <button
                      className="nav-link btn btn-outline-secondary"
                      onClick={[Function]}
                    >
                      Sign Out
                    </button>
                  </li>
                </ul>
              </div>,
            ],
            "className": "container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Authors Haven",
                "className": "navbar-brand",
                "replace": false,
                "to": "#",
              },
              "ref": null,
              "rendered": "Authors Haven",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <span
                  className="navbar-toggler-icon"
                />,
                "className": "navbar-toggler",
                "data-target": "#mobile-nav",
                "data-toggle": "collapse",
                "type": "button",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "navbar-toggler-icon",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ul
                  className="navbar-nav ml-auto"
                >
                  <withRouter(SearchForm) />
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="fas fa-search"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="far fa-bell"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="/articles"
                    >
                      Dashboard
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="/article/post"
                    >
                      <i
                        className="fas fa-plus"
                      />
                      New Article
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      data-placement="bottom"
                      data-toggle="popover"
                      data-trigger="focus"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="far fa-user-circle fa-2x"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <button
                      className="nav-link btn btn-outline-secondary"
                      onClick={[Function]}
                    >
                      Sign Out
                    </button>
                  </li>
                </ul>,
                "className": "collapse navbar-collapse",
                "id": "mobile-nav",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <withRouter(SearchForm) />,
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="fas fa-search"
                        />
                      </Link>
                    </li>,
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="far fa-bell"
                        />
                      </Link>
                    </li>,
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="/articles"
                      >
                        Dashboard
                      </Link>
                    </li>,
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="/article/post"
                      >
                        <i
                          className="fas fa-plus"
                        />
                        New Article
                      </Link>
                    </li>,
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        data-placement="bottom"
                        data-toggle="popover"
                        data-trigger="focus"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="far fa-user-circle fa-2x"
                        />
                      </Link>
                    </li>,
                    <li
                      className="nav-item"
                    >
                      <button
                        className="nav-link btn btn-outline-secondary"
                        onClick={[Function]}
                      >
                        Sign Out
                      </button>
                    </li>,
                  ],
                  "className": "navbar-nav ml-auto",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Link
                        className="nav-link"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="fas fa-search"
                        />
                      </Link>,
                      "className": "nav-item",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <i
                          className="fas fa-search"
                        />,
                        "className": "nav-link",
                        "replace": false,
                        "to": "#",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "fas fa-search",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "i",
                      },
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Link
                        className="nav-link"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="far fa-bell"
                        />
                      </Link>,
                      "className": "nav-item",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <i
                          className="far fa-bell"
                        />,
                        "className": "nav-link",
                        "replace": false,
                        "to": "#",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "far fa-bell",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "i",
                      },
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Link
                        className="nav-link"
                        replace={false}
                        to="/articles"
                      >
                        Dashboard
                      </Link>,
                      "className": "nav-item",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "Dashboard",
                        "className": "nav-link",
                        "replace": false,
                        "to": "/articles",
                      },
                      "ref": null,
                      "rendered": "Dashboard",
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Link
                        className="nav-link"
                        replace={false}
                        to="/article/post"
                      >
                        <i
                          className="fas fa-plus"
                        />
                        New Article
                      </Link>,
                      "className": "nav-item",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": Array [
                          <i
                            className="fas fa-plus"
                          />,
                          "New Article",
                        ],
                        "className": "nav-link",
                        "replace": false,
                        "to": "/article/post",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "className": "fas fa-plus",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "i",
                        },
                        "New Article",
                      ],
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Link
                        className="nav-link"
                        data-placement="bottom"
                        data-toggle="popover"
                        data-trigger="focus"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="far fa-user-circle fa-2x"
                        />
                      </Link>,
                      "className": "nav-item",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <i
                          className="far fa-user-circle fa-2x"
                        />,
                        "className": "nav-link",
                        "data-placement": "bottom",
                        "data-toggle": "popover",
                        "data-trigger": "focus",
                        "replace": false,
                        "to": "#",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "far fa-user-circle fa-2x",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "i",
                      },
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <button
                        className="nav-link btn btn-outline-secondary"
                        onClick={[Function]}
                      >
                        Sign Out
                      </button>,
                      "className": "nav-item",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Sign Out",
                        "className": "nav-link btn btn-outline-secondary",
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": "Sign Out",
                      "type": "button",
                    },
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "nav",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <nav
            className="navbar navbar-expand-sm navbar-dark bg-dark mb-5 fixed-top"
          >
            <div
              className="container"
            >
              <Link
                className="navbar-brand"
                replace={false}
                to="#"
              >
                Authors Haven
              </Link>
              <button
                className="navbar-toggler"
                data-target="#mobile-nav"
                data-toggle="collapse"
                type="button"
              >
                <span
                  className="navbar-toggler-icon"
                />
              </button>
              <div
                className="collapse navbar-collapse"
                id="mobile-nav"
              >
                <ul
                  className="navbar-nav ml-auto"
                >
                  <withRouter(SearchForm) />
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="fas fa-search"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="far fa-bell"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="/articles"
                    >
                      Dashboard
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="/article/post"
                    >
                      <i
                        className="fas fa-plus"
                      />
                      New Article
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      data-placement="bottom"
                      data-toggle="popover"
                      data-trigger="focus"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="far fa-user-circle fa-2x"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <button
                      className="nav-link btn btn-outline-secondary"
                      onClick={[Function]}
                    >
                      Sign Out
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </nav>,
          <LinksPopup />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="container"
            >
              <Link
                className="navbar-brand"
                replace={false}
                to="#"
              >
                Authors Haven
              </Link>
              <button
                className="navbar-toggler"
                data-target="#mobile-nav"
                data-toggle="collapse"
                type="button"
              >
                <span
                  className="navbar-toggler-icon"
                />
              </button>
              <div
                className="collapse navbar-collapse"
                id="mobile-nav"
              >
                <ul
                  className="navbar-nav ml-auto"
                >
                  <withRouter(SearchForm) />
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="fas fa-search"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="far fa-bell"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="/articles"
                    >
                      Dashboard
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      replace={false}
                      to="/article/post"
                    >
                      <i
                        className="fas fa-plus"
                      />
                      New Article
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link"
                      data-placement="bottom"
                      data-toggle="popover"
                      data-trigger="focus"
                      replace={false}
                      to="#"
                    >
                      <i
                        className="far fa-user-circle fa-2x"
                      />
                    </Link>
                  </li>
                  <li
                    className="nav-item"
                  >
                    <button
                      className="nav-link btn btn-outline-secondary"
                      onClick={[Function]}
                    >
                      Sign Out
                    </button>
                  </li>
                </ul>
              </div>
            </div>,
            "className": "navbar navbar-expand-sm navbar-dark bg-dark mb-5 fixed-top",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Link
                  className="navbar-brand"
                  replace={false}
                  to="#"
                >
                  Authors Haven
                </Link>,
                <button
                  className="navbar-toggler"
                  data-target="#mobile-nav"
                  data-toggle="collapse"
                  type="button"
                >
                  <span
                    className="navbar-toggler-icon"
                  />
                </button>,
                <div
                  className="collapse navbar-collapse"
                  id="mobile-nav"
                >
                  <ul
                    className="navbar-nav ml-auto"
                  >
                    <withRouter(SearchForm) />
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="fas fa-search"
                        />
                      </Link>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="far fa-bell"
                        />
                      </Link>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="/articles"
                      >
                        Dashboard
                      </Link>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="/article/post"
                      >
                        <i
                          className="fas fa-plus"
                        />
                        New Article
                      </Link>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        data-placement="bottom"
                        data-toggle="popover"
                        data-trigger="focus"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="far fa-user-circle fa-2x"
                        />
                      </Link>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <button
                        className="nav-link btn btn-outline-secondary"
                        onClick={[Function]}
                      >
                        Sign Out
                      </button>
                    </li>
                  </ul>
                </div>,
              ],
              "className": "container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Authors Haven",
                  "className": "navbar-brand",
                  "replace": false,
                  "to": "#",
                },
                "ref": null,
                "rendered": "Authors Haven",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <span
                    className="navbar-toggler-icon"
                  />,
                  "className": "navbar-toggler",
                  "data-target": "#mobile-nav",
                  "data-toggle": "collapse",
                  "type": "button",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "navbar-toggler-icon",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <ul
                    className="navbar-nav ml-auto"
                  >
                    <withRouter(SearchForm) />
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="fas fa-search"
                        />
                      </Link>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="far fa-bell"
                        />
                      </Link>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="/articles"
                      >
                        Dashboard
                      </Link>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        replace={false}
                        to="/article/post"
                      >
                        <i
                          className="fas fa-plus"
                        />
                        New Article
                      </Link>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <Link
                        className="nav-link"
                        data-placement="bottom"
                        data-toggle="popover"
                        data-trigger="focus"
                        replace={false}
                        to="#"
                      >
                        <i
                          className="far fa-user-circle fa-2x"
                        />
                      </Link>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <button
                        className="nav-link btn btn-outline-secondary"
                        onClick={[Function]}
                      >
                        Sign Out
                      </button>
                    </li>
                  </ul>,
                  "className": "collapse navbar-collapse",
                  "id": "mobile-nav",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <withRouter(SearchForm) />,
                      <li
                        className="nav-item"
                      >
                        <Link
                          className="nav-link"
                          replace={false}
                          to="#"
                        >
                          <i
                            className="fas fa-search"
                          />
                        </Link>
                      </li>,
                      <li
                        className="nav-item"
                      >
                        <Link
                          className="nav-link"
                          replace={false}
                          to="#"
                        >
                          <i
                            className="far fa-bell"
                          />
                        </Link>
                      </li>,
                      <li
                        className="nav-item"
                      >
                        <Link
                          className="nav-link"
                          replace={false}
                          to="/articles"
                        >
                          Dashboard
                        </Link>
                      </li>,
                      <li
                        className="nav-item"
                      >
                        <Link
                          className="nav-link"
                          replace={false}
                          to="/article/post"
                        >
                          <i
                            className="fas fa-plus"
                          />
                          New Article
                        </Link>
                      </li>,
                      <li
                        className="nav-item"
                      >
                        <Link
                          className="nav-link"
                          data-placement="bottom"
                          data-toggle="popover"
                          data-trigger="focus"
                          replace={false}
                          to="#"
                        >
                          <i
                            className="far fa-user-circle fa-2x"
                          />
                        </Link>
                      </li>,
                      <li
                        className="nav-item"
                      >
                        <button
                          className="nav-link btn btn-outline-secondary"
                          onClick={[Function]}
                        >
                          Sign Out
                        </button>
                      </li>,
                    ],
                    "className": "navbar-nav ml-auto",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {},
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Link
                          className="nav-link"
                          replace={false}
                          to="#"
                        >
                          <i
                            className="fas fa-search"
                          />
                        </Link>,
                        "className": "nav-item",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": <i
                            className="fas fa-search"
                          />,
                          "className": "nav-link",
                          "replace": false,
                          "to": "#",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "className": "fas fa-search",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "i",
                        },
                        "type": [Function],
                      },
                      "type": "li",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Link
                          className="nav-link"
                          replace={false}
                          to="#"
                        >
                          <i
                            className="far fa-bell"
                          />
                        </Link>,
                        "className": "nav-item",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": <i
                            className="far fa-bell"
                          />,
                          "className": "nav-link",
                          "replace": false,
                          "to": "#",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "className": "far fa-bell",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "i",
                        },
                        "type": [Function],
                      },
                      "type": "li",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Link
                          className="nav-link"
                          replace={false}
                          to="/articles"
                        >
                          Dashboard
                        </Link>,
                        "className": "nav-item",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": "Dashboard",
                          "className": "nav-link",
                          "replace": false,
                          "to": "/articles",
                        },
                        "ref": null,
                        "rendered": "Dashboard",
                        "type": [Function],
                      },
                      "type": "li",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Link
                          className="nav-link"
                          replace={false}
                          to="/article/post"
                        >
                          <i
                            className="fas fa-plus"
                          />
                          New Article
                        </Link>,
                        "className": "nav-item",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": Array [
                            <i
                              className="fas fa-plus"
                            />,
                            "New Article",
                          ],
                          "className": "nav-link",
                          "replace": false,
                          "to": "/article/post",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "className": "fas fa-plus",
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "i",
                          },
                          "New Article",
                        ],
                        "type": [Function],
                      },
                      "type": "li",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <Link
                          className="nav-link"
                          data-placement="bottom"
                          data-toggle="popover"
                          data-trigger="focus"
                          replace={false}
                          to="#"
                        >
                          <i
                            className="far fa-user-circle fa-2x"
                          />
                        </Link>,
                        "className": "nav-item",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": <i
                            className="far fa-user-circle fa-2x"
                          />,
                          "className": "nav-link",
                          "data-placement": "bottom",
                          "data-toggle": "popover",
                          "data-trigger": "focus",
                          "replace": false,
                          "to": "#",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "className": "far fa-user-circle fa-2x",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "i",
                        },
                        "type": [Function],
                      },
                      "type": "li",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <button
                          className="nav-link btn btn-outline-secondary"
                          onClick={[Function]}
                        >
                          Sign Out
                        </button>,
                        "className": "nav-item",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Sign Out",
                          "className": "nav-link btn btn-outline-secondary",
                          "onClick": [Function],
                        },
                        "ref": null,
                        "rendered": "Sign Out",
                        "type": "button",
                      },
                      "type": "li",
                    },
                  ],
                  "type": "ul",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "nav",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<LoggedOutNavBar/> matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoggedOutNavBar />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <Link
          className="navbar-brand"
          replace={false}
          to="/"
        >
          Authors Haven
        </Link>
        <button
          className="navbar-toggler"
          data-target="#mobile-nav"
          data-toggle="collapse"
          type="button"
        >
          <span
            className="navbar-toggler-icon"
          />
        </button>
        <div
          className="collapse navbar-collapse"
          id="mobile-nav"
        >
          <ul
            className="navbar-nav ml-auto"
          >
            <li
              className="nav-item"
            >
              <Link
                className="nav-link mr-2"
                replace={false}
                to="/login"
              >
                Sign in
              </Link>
            </li>
            <li
              className="nav-item"
            >
              <Link
                className="nav-link btn btn-outline-secondary"
                replace={false}
                to="/register"
              >
                Sign up
              </Link>
            </li>
          </ul>
        </div>
      </div>,
      "className": "navbar navbar-expand-sm navbar-dark bg-dark mb-5 fixed-top",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="navbar-brand"
            replace={false}
            to="/"
          >
            Authors Haven
          </Link>,
          <button
            className="navbar-toggler"
            data-target="#mobile-nav"
            data-toggle="collapse"
            type="button"
          >
            <span
              className="navbar-toggler-icon"
            />
          </button>,
          <div
            className="collapse navbar-collapse"
            id="mobile-nav"
          >
            <ul
              className="navbar-nav ml-auto"
            >
              <li
                className="nav-item"
              >
                <Link
                  className="nav-link mr-2"
                  replace={false}
                  to="/login"
                >
                  Sign in
                </Link>
              </li>
              <li
                className="nav-item"
              >
                <Link
                  className="nav-link btn btn-outline-secondary"
                  replace={false}
                  to="/register"
                >
                  Sign up
                </Link>
              </li>
            </ul>
          </div>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Authors Haven",
            "className": "navbar-brand",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": "Authors Haven",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="navbar-toggler-icon"
            />,
            "className": "navbar-toggler",
            "data-target": "#mobile-nav",
            "data-toggle": "collapse",
            "type": "button",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "navbar-toggler-icon",
            },
            "ref": null,
            "rendered": null,
            "type": "span",
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ul
              className="navbar-nav ml-auto"
            >
              <li
                className="nav-item"
              >
                <Link
                  className="nav-link mr-2"
                  replace={false}
                  to="/login"
                >
                  Sign in
                </Link>
              </li>
              <li
                className="nav-item"
              >
                <Link
                  className="nav-link btn btn-outline-secondary"
                  replace={false}
                  to="/register"
                >
                  Sign up
                </Link>
              </li>
            </ul>,
            "className": "collapse navbar-collapse",
            "id": "mobile-nav",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link mr-2"
                    replace={false}
                    to="/login"
                  >
                    Sign in
                  </Link>
                </li>,
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link btn btn-outline-secondary"
                    replace={false}
                    to="/register"
                  >
                    Sign up
                  </Link>
                </li>,
              ],
              "className": "navbar-nav ml-auto",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    className="nav-link mr-2"
                    replace={false}
                    to="/login"
                  >
                    Sign in
                  </Link>,
                  "className": "nav-item",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Sign in",
                    "className": "nav-link mr-2",
                    "replace": false,
                    "to": "/login",
                  },
                  "ref": null,
                  "rendered": "Sign in",
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    className="nav-link btn btn-outline-secondary"
                    replace={false}
                    to="/register"
                  >
                    Sign up
                  </Link>,
                  "className": "nav-item",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Sign up",
                    "className": "nav-link btn btn-outline-secondary",
                    "replace": false,
                    "to": "/register",
                  },
                  "ref": null,
                  "rendered": "Sign up",
                  "type": [Function],
                },
                "type": "li",
              },
            ],
            "type": "ul",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <Link
            className="navbar-brand"
            replace={false}
            to="/"
          >
            Authors Haven
          </Link>
          <button
            className="navbar-toggler"
            data-target="#mobile-nav"
            data-toggle="collapse"
            type="button"
          >
            <span
              className="navbar-toggler-icon"
            />
          </button>
          <div
            className="collapse navbar-collapse"
            id="mobile-nav"
          >
            <ul
              className="navbar-nav ml-auto"
            >
              <li
                className="nav-item"
              >
                <Link
                  className="nav-link mr-2"
                  replace={false}
                  to="/login"
                >
                  Sign in
                </Link>
              </li>
              <li
                className="nav-item"
              >
                <Link
                  className="nav-link btn btn-outline-secondary"
                  replace={false}
                  to="/register"
                >
                  Sign up
                </Link>
              </li>
            </ul>
          </div>
        </div>,
        "className": "navbar navbar-expand-sm navbar-dark bg-dark mb-5 fixed-top",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              className="navbar-brand"
              replace={false}
              to="/"
            >
              Authors Haven
            </Link>,
            <button
              className="navbar-toggler"
              data-target="#mobile-nav"
              data-toggle="collapse"
              type="button"
            >
              <span
                className="navbar-toggler-icon"
              />
            </button>,
            <div
              className="collapse navbar-collapse"
              id="mobile-nav"
            >
              <ul
                className="navbar-nav ml-auto"
              >
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link mr-2"
                    replace={false}
                    to="/login"
                  >
                    Sign in
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link btn btn-outline-secondary"
                    replace={false}
                    to="/register"
                  >
                    Sign up
                  </Link>
                </li>
              </ul>
            </div>,
          ],
          "className": "container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Authors Haven",
              "className": "navbar-brand",
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": "Authors Haven",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <span
                className="navbar-toggler-icon"
              />,
              "className": "navbar-toggler",
              "data-target": "#mobile-nav",
              "data-toggle": "collapse",
              "type": "button",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "navbar-toggler-icon",
              },
              "ref": null,
              "rendered": null,
              "type": "span",
            },
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ul
                className="navbar-nav ml-auto"
              >
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link mr-2"
                    replace={false}
                    to="/login"
                  >
                    Sign in
                  </Link>
                </li>
                <li
                  className="nav-item"
                >
                  <Link
                    className="nav-link btn btn-outline-secondary"
                    replace={false}
                    to="/register"
                  >
                    Sign up
                  </Link>
                </li>
              </ul>,
              "className": "collapse navbar-collapse",
              "id": "mobile-nav",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link mr-2"
                      replace={false}
                      to="/login"
                    >
                      Sign in
                    </Link>
                  </li>,
                  <li
                    className="nav-item"
                  >
                    <Link
                      className="nav-link btn btn-outline-secondary"
                      replace={false}
                      to="/register"
                    >
                      Sign up
                    </Link>
                  </li>,
                ],
                "className": "navbar-nav ml-auto",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      className="nav-link mr-2"
                      replace={false}
                      to="/login"
                    >
                      Sign in
                    </Link>,
                    "className": "nav-item",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Sign in",
                      "className": "nav-link mr-2",
                      "replace": false,
                      "to": "/login",
                    },
                    "ref": null,
                    "rendered": "Sign in",
                    "type": [Function],
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      className="nav-link btn btn-outline-secondary"
                      replace={false}
                      to="/register"
                    >
                      Sign up
                    </Link>,
                    "className": "nav-item",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Sign up",
                      "className": "nav-link btn btn-outline-secondary",
                      "replace": false,
                      "to": "/register",
                    },
                    "ref": null,
                    "rendered": "Sign up",
                    "type": [Function],
                  },
                  "type": "li",
                },
              ],
              "type": "ul",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
